# langgraph-on-agentcore-with-otel

./: .dockerignore  .env.sample  .gitignore  .secrets.sample  CLAUDE.md  Dockerfile  LICENSE  MODELFAILOVER.md  Makefile  README.md  deploy.sh  destroy.sh  langgraph_agent_web_search.py  pyproject.toml  requirements.txt  resilience.py
cdk/: app.py  cdk.json
cdk/stacks/: __init__.py  agent_infra_stack.py  constants.py  iam_stack.py  memory_stack.py  runtime_stack.py  secrets_stack.py
docs/: video-script-otel-observability.md
scripts/: __init__.py  analyze_traces.py  check_aws_creds.py  check_prereqs.py  deploy.py  destroy.py  format_logs.py  invoke.py
scripts/lib/: __init__.py  aws.py  commands.py  config.py  console.py  yaml_parser.py
tests/: conftest.py  test_agent.py  test_agent_functions.py  test_cdk.py
ui/: __init__.py  app.py  prompts.json
ui/components/: __init__.py  execution_panel.py  prompt_library.py  results_view.py
ui/lib/: __init__.py  agent_invoker.py  aws_config.py  models.py  prompt_store.py
