[project]
name = "langgraph-agentcore-sample"
version = "0.1.0"
description = "LangGraph agent with web search deployed to AWS Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    # Core LangChain/LangGraph
    "langchain~=1.2.0",
    "langgraph~=1.0.5",
    "langchain-aws~=1.1.0",
    "langchain-community~=0.4.1",
    "langchain-core~=1.2.4",
    # Tools and utilities
    "tavily-python~=0.7.17",
    "python-dotenv~=1.2.1",
    # AWS Bedrock AgentCore
    "bedrock-agentcore~=1.1.1",
    "bedrock-agentcore-starter-toolkit~=0.2.5",
    # OpenTelemetry instrumentation
    "opentelemetry-instrumentation-langchain~=0.45.6",
    "aws-opentelemetry-distro~=0.12.2",
    # CDK for infrastructure management
    "aws-cdk-lib~=2.233.0",
    "constructs~=10.4.4",
]

[dependency-groups]
dev = [
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# E402: Module level import not at top of file
# This is intentional for agentcore apps - the import must be after function definitions
"langgraph_agent_web_search.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
